--- a/HG_Data.csproj
+++ b/HG_Data.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Character\Player\InventorySlot.cs" />
     <Compile Include="Character\Player\Player.cs" />
     <Compile Include="Data\Activity.cs" />
+    <Compile Include="Data\Savegame.cs" />
     <Compile Include="Data\SceneData.cs" />
     <Compile Include="Data\Waypoint.cs" />
     <Compile Include="Objects\Collectables\Artefact.cs" />
